# uos_active_perception

./: .gitignore  README.md  stack.xml
active_perception_evaluation/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
active_perception_evaluation/Media/materials/textures/: tams_demo.yaml
active_perception_evaluation/Media/models/: Rest.dae  Rest.mtl  Rest.sh3d  Rest.stl  Rest_collision.dae  Rest_collision.sh3d  book1.dae  flowers1.dae  fork1.dae  iphone5.dae  knife1.dae  oilservers1.dae  race_chair1.dae  race_chair1_a.stl  race_mug3.dae  race_mug3.stl  race_mug3_red2.dae  spoon1.dae
active_perception_evaluation/Media/models/flowers/: flowers1.dae  flowers1.ply
active_perception_evaluation/Media/models/fork/: fork1.dae  fork1.ply
active_perception_evaluation/Media/models/fork_old/: fork1.dae
active_perception_evaluation/Media/models/knife/: knife1.dae  knife1.ply
active_perception_evaluation/Media/models/mobile/: iphone5.ply  mobile.dae
active_perception_evaluation/Media/models/oilservers/: oilservers.dae  oilservers1.ply
active_perception_evaluation/Media/models/race_book_c/: book_c.dae
active_perception_evaluation/Media/models/race_book_java/: book_java.dae
active_perception_evaluation/Media/models/spoon/: spoon1.dae  spoon1.ply
active_perception_evaluation/config/: amcl_node.xml  costmap_common_params.yaml  map_sim.pgm  map_sim.yaml  obstacle_map_race.pgm  obstacle_map_race.yaml  obstacle_map_race_extended.yaml
active_perception_evaluation/launch/: floating_kinect_navigation.launch  pr2_navigation.launch  race_world.launch  spawn_floating_kinect.launch  spawn_object_at_xyz.launch  spawn_pr2.launch  spawn_race_furniture.launch  spawn_race_models.launch  spawn_race_objects.launch
active_perception_evaluation/models/: 000.580.67.model  coffee_cup.model  coke_can.model  cylinder1.dae  race_board.model  race_book1.model  race_book_c.model  race_book_java.model  race_bowl.model  race_chair1.model  race_female_standing.model  race_flowers1.model  race_fork1.model  race_iphone5.model  race_knife1.model  race_menucard.model  race_mobile1.model  race_oilservers1.model  race_peppermill1.model  race_spoon1.model  race_table2.model  race_table_140x70.model  race_table_70x70.model  race_table_counter1.model  race_table_table1.model  race_table_table2.model
active_perception_evaluation/robots/: floating_kinect.urdf.xacro
active_perception_evaluation/scripts/: common.py  eval_plans.py  eval_runs.py  evaluate_random_drive.py  evaluate_searchrun.py  evman-results.py  evman.py  plot_nbv_coverage.py  time_comparison.py
active_perception_evaluation/src/: floating_kinect_localizer.cpp  sim_amcl_update.cpp  sim_manipulator.cpp  sim_manipulator.h
active_perception_evaluation/urdf/: box.urdf.xacro  common.xacro  race_coffee_cup.urdf  race_coffee_cup.urdf.xacro  race_coffee_cup_hot.urdf.xacro  race_pr2.urdf  race_tray.gv  race_tray.urdf  race_tray.urdf.dae  race_tray.wings  race_tray_comb.ply  race_tray_comb.stl  race_tray_comb.wings  wine_glass.urdf.xacro
active_perception_evaluation/worlds/: race.world
asp_msgs/: mainpage.dox  manifest.xml
asp_msgs/msg/: BoundingBox.msg  CameraConstraints.msg
asp_spatial_reasoning/: CMakeLists.txt  mainpage.dox  manifest.xml
next_best_view_sampling/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
next_best_view_sampling/launch/: next_best_view_calvin.launch  next_best_view_pr2.launch  next_best_view_pr2_real.launch  next_best_view_pr2_simple.launch
next_best_view_sampling/src/: active_perception_map.cpp  active_perception_map.h  camera_constraints.h  next_best_view_node.cpp  next_best_view_node.h  observation_pose_sampler.cpp  observation_pose_sampler.h  servicetest.cpp
point_head_continuous/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
point_head_continuous/src/: point_head_continuous.cpp
pr2_head_monitor/: CMakeLists.txt  mainpage.dox  manifest.xml
race_active_perception_mapping/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
race_next_best_view/: CMakeLists.txt  mainpage.dox  manifest.xml
race_next_best_view/msg/: CellIds.msg  (+2 more)
race_object_search/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
race_object_search/action/: ObserveVolumes.action
race_object_search/config/: object_search.vcg
race_object_search/config/maps/: race.pgm  race.yaml  race_extended.pgm  race_extended.yaml  race_extended_inflated.pgm  race_extended_inflated.yaml  race_inflated.pgm  race_inflated.yaml
race_object_search/launch/: object_search_manager.launch  object_search_manager_fk.launch  object_search_planner.launch  object_search_planner_debug.launch  object_search_prerequisites.launch  object_search_prerequisites_pr2.launch  race_object_search.launch  simple_search_manager.launch
race_object_search/scripts/: evaluate_random_drive.py
race_object_search/src/: active_explorer_node.cpp  floating_kinect_agent.cpp  floating_kinect_agent.h  geometry.h  kmeans-test.cpp  kmeans.cpp  kmeans.h  misc-test.cpp  nbv_reachability_filter_node.cpp  nbv_sampling_evaluator.cpp  object_search_manager.cpp  object_search_manager.h  object_search_manager_node.cpp  object_search_manager_reset.cpp  object_search_manager_test.cpp  object_search_planner.cpp  object_search_planner.h  observation_pose_collection.cpp  observation_pose_collection.h  pr2_agent.cpp  pr2_agent.h  random_driver.cpp  ros_serialization_helper.h  search_plan.h  search_plan2.h  search_planner.h  search_planner_tutorial.h  simple_search_manager.cpp  simple_search_manager.h  turtlebot_agent.cpp  turtlebot_agent.h
sensor_motion_filter/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
sensor_motion_filter/src/: point_cloud_2_motion_filter.cpp  point_cloud_2_motion_filter.h
uos_active_perception_msgs/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
uos_active_perception_msgs/msg/: CellId.msg  CellIds.msg  ConditionalVisibilityMap.msg  ObjectSet.msg
uos_active_perception_msgs/srv/: EvaluateObservationCameraPoses.srv  GetBboxOccupancy.srv  GetObservationCameraPoses.srv  ReadWriteFiles.srv  ResetVolumes.srv
(+38 files in other folders)
