<?xml version="1.0"?>
<package>
  <name>next_best_view_sampling</name>
  <version>1.0.0</version>
  <description>Next best view sampling.</description>

  <maintainer email="martin.guenther@dfki.de">Martin Guenther</maintainer>

  <license>BSD</license>

  <url type="website">http://kos.informatik.uos.de/flap4caos/</url>
  <url type="repository">https://github.com/uos/uos_active_perception</url>
  <url type="bugtracker">https://github.com/uos/uos_active_perception/issues</url>

  <author>Thorsten Gedicke</author>
  <author email="martin.guenther@dfki.de">Martin Guenther</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>uos_active_perception_msgs</build_depend>

  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>octomap_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>uos_active_perception_msgs</run_depend>

</package>
