<?xml version="1.0"?>
<package>
  <name>point_head_continuous</name>
  <version>1.0.0</version>
  <description>Takes PointHeadGoal targets and keeps the head pointing towards the target.</description>

  <maintainer email="martin.guenther@dfki.de">Martin Guenther</maintainer>

  <license>BSD</license>

  <url type="website">http://kos.informatik.uos.de/flap4caos/</url>
  <url type="repository">https://github.com/uos/uos_active_perception</url>
  <url type="bugtracker">https://github.com/uos/uos_active_perception/issues</url>

  <author>Thorsten Gedicke</author>
  <author email="martin.guenther@dfki.de">Martin Guenther</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>roscpp</run_depend>
</package>
