<?xml version="1.0"?>
<package>
  <name>race_object_search</name>
  <version>1.0.0</version>
  <description>
    RACE object search.

    Although this package builds without RACE dependencies, most nodes require the service
    /move_base_node/make_multiple_plans which is provided by the RACE navigation overlay.
  </description>

  <maintainer email="martin.guenther@dfki.de">Martin Guenther</maintainer>

  <license>BSD</license>

  <url type="website">http://kos.informatik.uos.de/flap4caos/</url>
  <url type="repository">https://github.com/uos/uos_active_perception</url>
  <url type="bugtracker">https://github.com/uos/uos_active_perception/issues</url>

  <author>Thorsten Gedicke</author>
  <author email="martin.guenther@dfki.de">Martin Guenther</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>next_best_view_sampling</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>uos_active_perception_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>next_best_view_sampling</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>uos_active_perception_msgs</run_depend>
</package>
