<?xml version="1.0"?>
<package>
  <name>sensor_motion_filter</name>
  <version>1.0.0</version>
  <description>Topic filter that only forwards a PointCloud2 topic when the sensor frame is not in motion.</description>

  <maintainer email="martin.guenther@dfki.de">Martin Guenther</maintainer>

  <license>BSD</license>

  <url type="website">http://kos.informatik.uos.de/flap4caos/</url>
  <url type="repository">https://github.com/uos/uos_active_perception</url>
  <url type="bugtracker">https://github.com/uos/uos_active_perception/issues</url>

  <author>Thorsten Gedicke</author>
  <author email="martin.guenther@dfki.de">Martin Guenther</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
