<?xml version="1.0"?>
<package>
  <name>uos_active_perception_msgs</name>
  <version>1.0.0</version>
  <description>Messages for uos_active_perception</description>

  <maintainer email="martin.guenther@dfki.de">Martin Guenther</maintainer>

  <license>BSD</license>

  <url type="website">http://kos.informatik.uos.de/flap4caos/</url>
  <url type="repository">https://github.com/uos/uos_active_perception</url>
  <url type="bugtracker">https://github.com/uos/uos_active_perception/issues</url>

  <author>Thorsten Gedicke</author>
  <author email="martin.guenther@dfki.de">Martin Guenther</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
